maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:56: error: not found: value leftRunnerMode
  leftRunnerMode();
  ^